# Collama

./: .gitignore  CHANGELOG.md  COMPARISON.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
collama/: __init__.py  agent.py  background.py  cli.py  config.py  coordinator.py  diff.py  engine.py  github.py  mcp.py  ollama_client.py  permissions.py  prompt.py  sessions.py  state.py  subagent.py  tasks.py  teams.py  tools.py  ui.py
collama/services/: __init__.py  compact.py  plugins.py  transcript.py
collama/tools/: __init__.py  background.py  base.py  core.py  interaction.py  mcp.py  notebook.py  planning.py  registry.py  search.py  subagent.py  syntax.py  system.py  tasks.py  teams.py  worktree.py
data/: investor_profile.json  last_trade_settings.json  portfolio.json  trading.db-shm  trading.db-wal
tests/: test_compact.py  test_config.py  test_diff.py  test_mcp.py  test_normalize_host.py  test_permissions.py  test_status_bar.py  test_tools_dispatch.py
