[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "collama"
version = "0.1.0"
description = "A Claude Code / Codex-style terminal coding agent powered by Ollama."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Collama" }]
dependencies = [
    "requests>=2.31",
    "prompt_toolkit>=3.0",
]

[project.scripts]
collama = "collama.cli:main"

[tool.setuptools.packages.find]
include = ["collama*"]
